chore: update jdk version to 17